slider with adaptive done

--- a/src/assets/scss/mixins/_adaptive.scss
+++ b/src/assets/scss/mixins/_adaptive.scss
@@ -4,6 +4,12 @@
     }
 }
 
+@mixin max-width-750 {
+    @media screen and (max-width: 750px) {
+        @content
+    }
+}
+
 @mixin min-width-651 {
     @media screen and (min-width: 651px) {
         @content
@@ -12,6 +18,12 @@
 
 @mixin max-width-650 {
     @media screen and (max-width: 650px) {
+        @content
+    }
+}
+
+@mixin max-width-550 {
+    @media screen and (max-width: 550px) {
         @content
     }
 }
