--- a/src/assets/scss/mixins/_adaptive.scss
+++ b/src/assets/scss/mixins/_adaptive.scss
@@ -1,5 +1,23 @@
+@mixin max-width-1190 {
+    @media screen and (max-width: 1190px) {
+        @content
+    }
+}
+
 @mixin max-width-1150 {
     @media screen and (max-width: 1150px) {
+        @content
+    }
+}
+
+@mixin max-width-850 {
+    @media screen and (max-width: 850px) {
+        @content
+    }
+}
+
+@mixin max-width-950 {
+    @media screen and (max-width: 950px) {
         @content
     }
 }
@@ -12,6 +30,12 @@
 
 @mixin min-width-651 {
     @media screen and (min-width: 651px) {
+        @content
+    }
+}
+
+@mixin max-width-760 {
+    @media screen and (max-width: 760px) {
         @content
     }
 }
