--- a/src/assets/fonts/icomoon/style.css
+++ b/src/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?muqtix');
-  src:  url('fonts/icomoon.eot?muqtix#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?muqtix') format('truetype'),
-    url('fonts/icomoon.woff?muqtix') format('woff'),
-    url('fonts/icomoon.svg?muqtix#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?xkm3nj');
+  src:  url('fonts/icomoon.eot?xkm3nj#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?xkm3nj') format('truetype'),
+    url('fonts/icomoon.woff?xkm3nj') format('woff'),
+    url('fonts/icomoon.svg?xkm3nj#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -48,6 +48,9 @@
 }
 .icon-user:before {
   content: "\f007";
+}
+.icon-check:before {
+  content: "\f00c";
 }
 .icon-refresh:before {
   content: "\f021";
