--- a/src/assets/fonts/icomoon/style.css
+++ b/src/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?xkm3nj');
-  src:  url('fonts/icomoon.eot?xkm3nj#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?xkm3nj') format('truetype'),
-    url('fonts/icomoon.woff?xkm3nj') format('woff'),
-    url('fonts/icomoon.svg?xkm3nj#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?81u8cq');
+  src:  url('fonts/icomoon.eot?81u8cq#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?81u8cq') format('truetype'),
+    url('fonts/icomoon.woff?81u8cq') format('woff'),
+    url('fonts/icomoon.svg?81u8cq#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -90,6 +90,9 @@
 }
 .icon-facebook-f:before {
   content: "\f09a";
+}
+.icon-filter:before {
+  content: "\f0b0";
 }
 .icon-arrows-alt:before {
   content: "\f0b2";
