--- a/src/assets/scss/mixins/_adaptive.scss
+++ b/src/assets/scss/mixins/_adaptive.scss
@@ -1,8 +1,15 @@
+@mixin min-width-1191 {
+    @media screen and (min-width: 1191px) {
+        @content
+    }
+}
+
 @mixin max-width-1190 {
     @media screen and (max-width: 1190px) {
         @content
     }
 }
+
 
 @mixin max-width-1150 {
     @media screen and (max-width: 1150px) {
