--- a/src/assets/fonts/icomoon/style.css
+++ b/src/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?81u8cq');
-  src:  url('fonts/icomoon.eot?81u8cq#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?81u8cq') format('truetype'),
-    url('fonts/icomoon.woff?81u8cq') format('woff'),
-    url('fonts/icomoon.svg?81u8cq#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?x6ubct');
+  src:  url('fonts/icomoon.eot?x6ubct#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?x6ubct') format('truetype'),
+    url('fonts/icomoon.woff?x6ubct') format('woff'),
+    url('fonts/icomoon.svg?x6ubct#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -73,6 +73,9 @@
 .icon-calendar:before {
   content: "\f073";
 }
+.icon-retweet:before {
+  content: "\f079";
+}
 .icon-arrows-h:before {
   content: "\f07e";
 }
@@ -108,6 +111,9 @@
 }
 .icon-mobile-phone:before {
   content: "\f10b";
+}
+.icon-quote-right:before {
+  content: "\f10e";
 }
 .icon-youtube:before {
   content: "\f167";
